--- a/public/navigation_css/wheyshop_tracking.css
+++ b/public/navigation_css/wheyshop_tracking.css
@@ -646,53 +646,74 @@ body {
     height: 800px;
 }
 
-.tag-status {
-    height: fit-content;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #eee;
-}
-
+/* 
 body {
     background-color: #aaa;
-}
-.tag-status-wrapper {
-    height: fit-content;
-    width: 100%;
+} */
+
+
+.tag-status {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
-    /* gap: 5px; */
+}
+
+.tag-status-wrapper {
+    display: flex;
 }
 
 .tag {
-    height: fit-content;
-    width: fit-content;
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 0 0 0 30px;
+    justify-content: center;
+    color: #fff;
+    background-color: #333;
+    overflow: hidden;
+    /* border: 1px solid #fff; */
 }
 
-
-.tag.active {
-    opacity: 1;
-    background-color: #ddd;
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    font-size: 14px;
+    min-width: 160px;
 }
 
-.tag-wrapper.active {
-    background-color: #fff;
-    border-radius: 30px 30px 0 0;
-}
-
-.tag-wrapper {
-    background-color: #999;
-    width: max-content;
-    height: fit-content;
-    padding: 10px 20px 10px 20px;
+.title3{
+    background-color: #888;
     border-radius: 30px;
-    margin: 8px;
+    margin: 4px 0;
 }
 
+.tracking-wrapper {
+    background-color: #888888;
+    width: 100%;
+}
+
+.tag1 {
+    border-bottom-right-radius: 12px;
+}
+
+.tag2 {
+    border-bottom-left-radius: 12px;
+}
+
+.tag3 {
+    /* background-color: #888; */
+    background-image: linear-gradient( #333 50%, #888 50%);
+    border: none;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    /* border: 1px solid red; */
+    
+}
+.tagbox{
+    background-image: linear-gradient(#333 50%, #888 50%);
+}
+
+.tag-none {
+    flex: 1;
+    background-color: #333;
+
+}
