--- a/public/navigation_css/wheyshop_tracking.css
+++ b/public/navigation_css/wheyshop_tracking.css
@@ -668,7 +668,7 @@ body {
     color: #fff;
     background-color: #333;
     overflow: hidden;
-    /* border: 1px solid #fff; */
+    height: 100%;
 }
 
 .title {
@@ -680,7 +680,7 @@ body {
     min-width: 160px;
 }
 
-.title3{
+.title3 {
     background-color: #888;
     border-radius: 30px;
     margin: 4px 0;
@@ -691,6 +691,7 @@ body {
     width: 100%;
 }
 
+
 .tag1 {
     border-bottom-right-radius: 12px;
 }
@@ -700,20 +701,23 @@ body {
 }
 
 .tag3 {
-    /* background-color: #888; */
-    background-image: linear-gradient( #333 50%, #888 50%);
+    background-image: linear-gradient(#333 50%, #888 50%);
     border: none;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    /* border: 1px solid red; */
-    
 }
-.tagbox{
+
+
+.tagbox3 {
     background-image: linear-gradient(#333 50%, #888 50%);
 }
 
-.tag-none {
+.tagbox--none {
     flex: 1;
     background-color: #333;
 
+}
+
+.tagbox--first{
+    width: 32px;
 }
