--- a/public/navigation_css/1wheyshop_tracking.css
+++ b/public/navigation_css/1wheyshop_tracking.css
@@ -629,6 +629,29 @@ body {
     text-decoration: none !important;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
+    background-color: #aaa;
+} */
+
 .tracking {
     width: 100%;
     height: 100%;
@@ -636,63 +659,421 @@ body {
 }
 
 .tracking-wrapper {
-    /* max-width: 1280px; */
     width: 100%;
     height: 100%;
-    /* margin: 0 10px; */
-    background-color: #fff;
-    /* padding: 30px; */
-    border-radius: 30px;
     height: 800px;
-}
-
-.tag-status {
-    height: fit-content;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 16px;
+}
+.tab-status{
+    height: 100%;
+    width: 400px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+.tab-status-wrapper{
+    position: relative;
+    padding: 30px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+}
+.close,
+.open{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: #fff;
+    border: unset;
+    height: 30px;
+    width: 30px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    color: #2196F3;
+}
+.close:hover,
+.open:hover{
     background-color: #eee;
 }
-
-body {
-    background-color: #aaa;
-}
-.tag-status-wrapper {
-    height: fit-content;
+.tab-account{
+    height: 80px;
     width: 100%;
+    overflow: hidden;
+}
+.user-account{
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    gap: 10px;
+    cursor: pointer;
+}
+/* .user-account:hover{
+    background-color: #f5f5f5;
+} */
+.user-account-img{
+    height: 100%;
+    width: fit-content;
+    padding: 0px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* gap: 5px; */
+    flex-shrink: 0;
 }
-
-.tag {
+.user-account-img img{
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 2px;
+    border: 2px solid #2196F3;
+}
+.user-account-information{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 5px;
+}
+.user-account-name{
+    height: fit-content;
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+}
+.user-account-edit{
     height: fit-content;
     width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 0 0 0 30px;
+    gap: 5px;
+    color: #999;
+    cursor: pointer;
+}
+.user-account-edit:hover{
+    color: #2196F3;
+}
+.user-account-edit i{
+    font-size: 14px;
+}
+.user-account-edit span{
+    line-height: 16px;
+    font-size: 14px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
 
-.tag.active {
-    opacity: 1;
-    background-color: #ddd;
+.tab{
+    min-height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tab button{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    color: #000;
+    border: unset;
+    border-radius: 12px;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    transition: all .2s;
+    text-align: start;
+}
+.tab button.active{
+    background-color: #2196F31a !important;
+}
+.tab button:hover{
+    background-color: #f5f5f5;
+}
+.tab button img{
+    height: 30px;
+}
+.tab button .text{
+    font-weight: 600;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
-.tag-wrapper.active {
+
+.tab-content{
+    height: 100%;
+    width: 100%;
     background-color: #fff;
-    border-radius: 30px 30px 0 0;
-}
-
-.tag-wrapper {
-    background-color: #999;
-    width: max-content;
-    height: fit-content;
-    padding: 10px 20px 10px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 30px;
-    margin: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+.tab-content-wrapper{
+    padding: 30px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+}
+.content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+}
+.title{
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    font-weight: 600;
+    font-size: 18px;
 }
 
+.open{
+    position: unset;
+}
+
+.list-order{
+    height: 100%;
+    width: 100%;
+    border-radius: 15px;
+    overflow-y: scroll;
+}
+.list-order::-webkit-scrollbar{
+    display: none;
+}
+.list-order-wrapper{
+    width: 100%;
+    height: fit-content;
+    /* background-color: #ddd; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+
+.order{
+    height: 160px;
+    width: 100%;
+    background-color: #f9f9f9;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+    cursor: pointer;
+}
+.order-wrapper{
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* gap: 10px; */
+}
+.header-order{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.status-order{
+    height: 100%;
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    color: #2196F3;
+    font-size: 14px;
+    cursor: pointer;
+}
+.status-order:hover{
+    color: #0076d7;
+}
+.first-product{
+    height: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    /* background-color: green; */
+}
+.first-product-img{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.first-product-img img{
+    height: 100%;
+}
+.first-product-information{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.information-group{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+}
+.first-product-name{
+    /* font-weight: 600; */
+    line-height: unset;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
+.first-product-quantity{
+    font-size: 14px;
+    color: #888;
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+}
+.first-product-quantity span{
+    font-size: 14px;
+}
+.first-product-price{
+    height: 100%;
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 5px;
+    flex-shrink: 0;
+    /* font-weight: 600; */
+}
+
+
+.total{
+    height: 32px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    
+}
+
+.total-products{
+    height: 100%;
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-shrink: 0;
+    gap: 5px;
+    color: #999;
+    font-size: 14px;
+}
+.total-products span{
+    font-size: 14px;
+}
+.total-price{
+    height: 100%;
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-shrink: 0;
+    gap: 5px;
+}
+.total-price span{
+    font-weight: 600;
+}
+.total img{
+    height: 20px;
+}
+
+
+
+.brand-offical {
+    height: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+.brand-offical-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+    background-color: rgb(0, 160, 255, 0.1);
+    padding: 2px 6px 2px 4px;
+    border-radius: 50em;
+}
+.check-icon {
+    height: 14px;
+}
+.brand-offical-logo span {
+    height: 16px;
+    font-size: 11px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: rgb(0, 100, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.brand-name{
+    font-weight: 600;
+}
