--- a/public/navigation_css/wheyshop_tracking.css
+++ b/public/navigation_css/wheyshop_tracking.css
@@ -676,6 +676,10 @@ body {
     align-items: center;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    transition: all .3s;
+}
+.tab-status:hover{
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .tab-status-wrapper{
     position: relative;
@@ -788,6 +792,46 @@ body {
 }
 
 
+.tab-button{
+    min-height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tab-button button{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    color: #000;
+    border: unset;
+    border-radius: 12px;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    transition: all .2s;
+    text-align: start;
+}
+.tab-button button.active{
+    background-color: #2196F31a !important;
+}
+.tab-button button:hover{
+    background-color: #f5f5f5;
+}
+.tab-button button img{
+    height: 30px;
+}
+.tab-button button .text{
+    font-weight: 600;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
 .tab{
     min-height: 60px;
     width: 100%;
@@ -839,6 +883,10 @@ body {
     align-items: center;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    transition: all .3s;
+}
+.tab-content:hover{
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .tab-content-wrapper{
     padding: 30px;
@@ -849,10 +897,13 @@ body {
     align-items: flex-start;
 
 }
+.content.active{
+    display: flex;
+}
 .content{
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -897,15 +948,18 @@ body {
 .order{
     height: 160px;
     width: 100%;
-    background-color: #f9f9f9;
+    background-color: #f9f9f950;
     border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 15px;
     cursor: pointer;
 }
+.order:hover{
+    background-color: #f8f8f8;
+}
 .order-wrapper{
     height: 100%;
     width: 100%;
-    padding: 10px;
+    padding: 10px 12px 10px 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1036,7 +1090,11 @@ body {
     flex-shrink: 0;
     gap: 5px;
 }
-.total-price span{
+.total-price div{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     font-weight: 600;
 }
 .total img{
