--- a/public/navigation_css/chatbox.css
+++ b/public/navigation_css/chatbox.css
@@ -347,7 +347,7 @@ a.chatbox__bottom__link-social__mess:active .messenger_ico{
     justify-content: center;
     font-size: 25px;
     height: fit-content;
-    /* width: 50px; */
+    border-radius: unset;
     min-height: 33px;
     cursor: pointer;
     color: #999;
