--- a/public/navigation_css/login.css
+++ b/public/navigation_css/login.css
@@ -79,13 +79,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .modal__body__box p:first-child {
-    margin: 0 0 30px;
+    margin: 0 0 40px;
     padding: 0;
     color: #000;
     text-align: center;
     font-size: 18px;
     font-weight: normal;
     letter-spacing: 1px;
+    font-weight: 600;
 }
 
 .modal__body__box .user-box {
@@ -145,7 +146,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: 600;
     text-decoration: none;
     overflow: hidden;
-    transition: .5s;
+    transition: .2s;
     letter-spacing: 3px;
     background-color: #fff;
     border: unset;
@@ -165,7 +166,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .modal__body__box button span{
-    background-color: rgba(255, 0, 0, 0.1) !important;
+    background-color: rgb(255, 0, 0) !important;
 }
 
 .modal__body__box button span:nth-child(1) {
